samples/_failures_safe/1761245894_11365a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51a9beff.c: In function ‘main’:
./samples/SAFE/__tmp_51a9beff.c:137:5: error: expected expression at end of input
  137 |     add_log_entry(&analyzer, "2024-01-15 10:30:00",
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_51a9beff.c:137:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_51a9beff.c:50:5: note: declared here
   50 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_51a9beff.c:137:5: error: expected declaration or statement at end of input
  137 |     add_log_entry(&analyzer, "2024-01-15 10:30:00",
      |     ^~~~~~~~~~~~~
